// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VegaLiteSchemaAdapter E2E Tests Area Charts Should transform graduation rates area chart 1`] = `
Object {
  "chartTitle": "Year",
  "data": Object {
    "chartTitle": "6-Year Graduation Rate Trend",
    "lineChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "x": 2019,
            "y": 78.5,
          },
          Object {
            "x": 2020,
            "y": 82.3,
          },
          Object {
            "x": 2021,
            "y": 85.7,
          },
          Object {
            "x": 2022,
            "y": 87.2,
          },
          Object {
            "x": 2023,
            "y": 89.8,
          },
          Object {
            "x": 2024,
            "y": 91.5,
          },
        ],
        "legend": "default",
      },
    ],
  },
  "height": undefined,
  "hideLegend": false,
  "mode": "tozeroy",
  "width": undefined,
  "yAxisTitle": "Graduation Rate (%)",
  "yMaxValue": 95,
  "yMinValue": 70,
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Area Charts Should transform multi-series area chart without stack 1`] = `
Object {
  "chartTitle": "Quarter",
  "data": Object {
    "chartTitle": "Department Performance - Overlapping Areas (No Stack)",
    "lineChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "x": 0,
            "y": 85,
          },
          Object {
            "x": 0,
            "y": 88,
          },
          Object {
            "x": 0,
            "y": 92,
          },
          Object {
            "x": 0,
            "y": 95,
          },
        ],
        "legend": "Sales",
      },
      Object {
        "color": "#e3008c",
        "data": Array [
          Object {
            "x": 0,
            "y": 70,
          },
          Object {
            "x": 0,
            "y": 75,
          },
          Object {
            "x": 0,
            "y": 82,
          },
          Object {
            "x": 0,
            "y": 88,
          },
        ],
        "legend": "Marketing",
      },
      Object {
        "color": "#2aa0a4",
        "data": Array [
          Object {
            "x": 0,
            "y": 60,
          },
          Object {
            "x": 0,
            "y": 65,
          },
          Object {
            "x": 0,
            "y": 70,
          },
          Object {
            "x": 0,
            "y": 75,
          },
        ],
        "legend": "Support",
      },
    ],
  },
  "height": 300,
  "hideLegend": false,
  "mode": "tozeroy",
  "width": 600,
  "yAxisTitle": "Performance Score",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Area Charts Should transform simple area chart 1`] = `
Object {
  "chartTitle": "Date",
  "data": Object {
    "chartTitle": "Simple Area Chart",
    "lineChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "x": 2023-01-01T00:00:00.000Z,
            "y": 28,
          },
          Object {
            "x": 2023-01-02T00:00:00.000Z,
            "y": 55,
          },
          Object {
            "x": 2023-01-03T00:00:00.000Z,
            "y": 43,
          },
          Object {
            "x": 2023-01-04T00:00:00.000Z,
            "y": 91,
          },
          Object {
            "x": 2023-01-05T00:00:00.000Z,
            "y": 81,
          },
        ],
        "legend": "A",
      },
      Object {
        "color": "#e3008c",
        "data": Array [
          Object {
            "x": 2023-01-01T00:00:00.000Z,
            "y": 20,
          },
          Object {
            "x": 2023-01-02T00:00:00.000Z,
            "y": 40,
          },
          Object {
            "x": 2023-01-03T00:00:00.000Z,
            "y": 30,
          },
          Object {
            "x": 2023-01-04T00:00:00.000Z,
            "y": 70,
          },
          Object {
            "x": 2023-01-05T00:00:00.000Z,
            "y": 60,
          },
        ],
        "legend": "B",
      },
    ],
  },
  "height": undefined,
  "hideLegend": false,
  "mode": "tonexty",
  "width": undefined,
  "yAxisTitle": "Value",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Area Charts Should transform stock price area chart 1`] = `
Object {
  "chartTitle": "Date",
  "data": Object {
    "chartTitle": "Stock Price Movement - TECH Inc.",
    "lineChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "x": 2024-11-01T00:00:00.000Z,
            "y": 142.5,
          },
          Object {
            "x": 2024-11-04T00:00:00.000Z,
            "y": 145.2,
          },
          Object {
            "x": 2024-11-05T00:00:00.000Z,
            "y": 143.8,
          },
          Object {
            "x": 2024-11-06T00:00:00.000Z,
            "y": 147.3,
          },
          Object {
            "x": 2024-11-07T00:00:00.000Z,
            "y": 146.1,
          },
          Object {
            "x": 2024-11-08T00:00:00.000Z,
            "y": 149.5,
          },
          Object {
            "x": 2024-11-11T00:00:00.000Z,
            "y": 151.2,
          },
          Object {
            "x": 2024-11-12T00:00:00.000Z,
            "y": 148.9,
          },
          Object {
            "x": 2024-11-13T00:00:00.000Z,
            "y": 152.4,
          },
          Object {
            "x": 2024-11-14T00:00:00.000Z,
            "y": 155.8,
          },
        ],
        "legend": "default",
      },
    ],
  },
  "height": undefined,
  "hideLegend": false,
  "mode": "tozeroy",
  "tickFormat": "%b %d",
  "width": undefined,
  "yAxisTitle": "Stock Price ($)",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Area Charts Should transform temperature area chart 1`] = `
Object {
  "chartTitle": "Date",
  "data": Object {
    "chartTitle": "Daily Temperature Variation",
    "lineChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "x": 2024-06-01T00:00:00.000Z,
            "y": 72,
          },
          Object {
            "x": 2024-06-02T00:00:00.000Z,
            "y": 75,
          },
          Object {
            "x": 2024-06-03T00:00:00.000Z,
            "y": 78,
          },
          Object {
            "x": 2024-06-04T00:00:00.000Z,
            "y": 76,
          },
          Object {
            "x": 2024-06-05T00:00:00.000Z,
            "y": 80,
          },
          Object {
            "x": 2024-06-06T00:00:00.000Z,
            "y": 82,
          },
          Object {
            "x": 2024-06-07T00:00:00.000Z,
            "y": 79,
          },
          Object {
            "x": 2024-06-08T00:00:00.000Z,
            "y": 77,
          },
          Object {
            "x": 2024-06-09T00:00:00.000Z,
            "y": 74,
          },
          Object {
            "x": 2024-06-10T00:00:00.000Z,
            "y": 73,
          },
        ],
        "legend": "default",
      },
    ],
  },
  "height": undefined,
  "hideLegend": false,
  "mode": "tozeroy",
  "width": undefined,
  "yAxisTitle": "Temperature (°F)",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Bar Charts Should transform age distribution bar chart 1`] = `
Object {
  "chartTitle": "Patient Age Distribution",
  "data": Array [
    Object {
      "color": "#637cef",
      "legend": "145",
      "x": "0-10",
      "y": 145,
    },
    Object {
      "color": "#e3008c",
      "legend": "98",
      "x": "11-20",
      "y": 98,
    },
    Object {
      "color": "#2aa0a4",
      "legend": "234",
      "x": "21-30",
      "y": 234,
    },
    Object {
      "color": "#9373c0",
      "legend": "312",
      "x": "31-40",
      "y": 312,
    },
    Object {
      "color": "#13a10e",
      "legend": "287",
      "x": "41-50",
      "y": 287,
    },
    Object {
      "color": "#3a96dd",
      "legend": "342",
      "x": "51-60",
      "y": 342,
    },
    Object {
      "color": "#ca5010",
      "legend": "398",
      "x": "61-70",
      "y": 398,
    },
    Object {
      "color": "#57811b",
      "legend": "276",
      "x": "71-80",
      "y": 276,
    },
    Object {
      "color": "#b146c2",
      "legend": "189",
      "x": "81+",
      "y": 189,
    },
  ],
  "roundCorners": true,
  "wrapXAxisLables": true,
  "xAxisTitle": "Age Group",
  "yAxisTitle": "Number of Patients",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Bar Charts Should transform grouped bar chart 1`] = `
Object {
  "chartTitle": "Quarterly Sales by Region",
  "data": Array [
    Object {
      "color": "#637cef",
      "legend": "North",
      "x": "Q1",
      "y": 45000,
    },
    Object {
      "color": "#e3008c",
      "legend": "South",
      "x": "Q1",
      "y": 38000,
    },
    Object {
      "color": "#637cef",
      "legend": "North",
      "x": "Q2",
      "y": 52000,
    },
    Object {
      "color": "#e3008c",
      "legend": "South",
      "x": "Q2",
      "y": 41000,
    },
    Object {
      "color": "#637cef",
      "legend": "North",
      "x": "Q3",
      "y": 48000,
    },
    Object {
      "color": "#e3008c",
      "legend": "South",
      "x": "Q3",
      "y": 39000,
    },
    Object {
      "color": "#637cef",
      "legend": "North",
      "x": "Q4",
      "y": 61000,
    },
    Object {
      "color": "#e3008c",
      "legend": "South",
      "x": "Q4",
      "y": 47000,
    },
  ],
  "roundCorners": true,
  "wrapXAxisLables": true,
  "xAxisTitle": "Quarter",
  "yAxisTitle": "Sales ($)",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Bar Charts Should transform precipitation bar chart 1`] = `
Object {
  "chartTitle": "Average Monthly Precipitation",
  "data": Array [
    Object {
      "color": "#637cef",
      "legend": "78",
      "x": "Jan",
      "y": 78,
    },
    Object {
      "color": "#e3008c",
      "legend": "65",
      "x": "Feb",
      "y": 65,
    },
    Object {
      "color": "#2aa0a4",
      "legend": "95",
      "x": "Mar",
      "y": 95,
    },
    Object {
      "color": "#9373c0",
      "legend": "112",
      "x": "Apr",
      "y": 112,
    },
    Object {
      "color": "#13a10e",
      "legend": "125",
      "x": "May",
      "y": 125,
    },
    Object {
      "color": "#3a96dd",
      "legend": "98",
      "x": "Jun",
      "y": 98,
    },
    Object {
      "color": "#ca5010",
      "legend": "45",
      "x": "Jul",
      "y": 45,
    },
    Object {
      "color": "#57811b",
      "legend": "52",
      "x": "Aug",
      "y": 52,
    },
    Object {
      "color": "#b146c2",
      "legend": "87",
      "x": "Sep",
      "y": 87,
    },
    Object {
      "color": "#ae8c00",
      "legend": "102",
      "x": "Oct",
      "y": 102,
    },
    Object {
      "color": "#3c51b4",
      "legend": "118",
      "x": "Nov",
      "y": 118,
    },
    Object {
      "color": "#ad006a",
      "legend": "92",
      "x": "Dec",
      "y": 92,
    },
  ],
  "roundCorners": true,
  "wrapXAxisLables": true,
  "xAxisTitle": "Month",
  "yAxisTitle": "Precipitation (mm)",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Bar Charts Should transform simple bar chart 1`] = `
Object {
  "chartTitle": "Horizontal Bar Chart",
  "data": Array [],
  "roundCorners": true,
  "wrapXAxisLables": false,
  "xAxisTitle": "Value",
  "yAxisTitle": "Category",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Bar Charts Should transform stacked vertical bar chart 1`] = `
Object {
  "chartTitle": "Quarterly Revenue by Category",
  "data": Array [
    Object {
      "color": "#637cef",
      "legend": "Electronics",
      "x": "Q1",
      "y": 45000,
    },
    Object {
      "color": "#e3008c",
      "legend": "Clothing",
      "x": "Q1",
      "y": 32000,
    },
    Object {
      "color": "#2aa0a4",
      "legend": "Food",
      "x": "Q1",
      "y": 28000,
    },
    Object {
      "color": "#637cef",
      "legend": "Electronics",
      "x": "Q2",
      "y": 52000,
    },
    Object {
      "color": "#e3008c",
      "legend": "Clothing",
      "x": "Q2",
      "y": 38000,
    },
    Object {
      "color": "#2aa0a4",
      "legend": "Food",
      "x": "Q2",
      "y": 31000,
    },
    Object {
      "color": "#637cef",
      "legend": "Electronics",
      "x": "Q3",
      "y": 48000,
    },
    Object {
      "color": "#e3008c",
      "legend": "Clothing",
      "x": "Q3",
      "y": 41000,
    },
    Object {
      "color": "#2aa0a4",
      "legend": "Food",
      "x": "Q3",
      "y": 29000,
    },
    Object {
      "color": "#637cef",
      "legend": "Electronics",
      "x": "Q4",
      "y": 61000,
    },
    Object {
      "color": "#e3008c",
      "legend": "Clothing",
      "x": "Q4",
      "y": 47000,
    },
    Object {
      "color": "#2aa0a4",
      "legend": "Food",
      "x": "Q4",
      "y": 35000,
    },
  ],
  "roundCorners": true,
  "wrapXAxisLables": true,
  "xAxisTitle": "Quarter",
  "yAxisTitle": "Revenue ($)",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Donut/Pie Charts Should transform genre popularity donut chart 1`] = `
Object {
  "data": Object {
    "chartData": Array [
      Object {
        "color": "#3487c7",
        "data": 24,
        "legend": "Action",
      },
      Object {
        "color": "#20547c",
        "data": 18,
        "legend": "Comedy",
      },
      Object {
        "color": "#f7630c",
        "data": 22,
        "legend": "Drama",
      },
      Object {
        "color": "#d06228",
        "data": 15,
        "legend": "Sci-Fi",
      },
      Object {
        "color": "#13a10e",
        "data": 12,
        "legend": "Horror",
      },
      Object {
        "color": "#0e7a0b",
        "data": 9,
        "legend": "Documentary",
      },
    ],
    "chartTitle": "Content Genre Distribution",
  },
  "innerRadius": 50,
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Donut/Pie Charts Should transform market share donut chart 1`] = `
Object {
  "data": Object {
    "chartData": Array [
      Object {
        "color": "#637cef",
        "data": 35,
        "legend": "Company A",
      },
      Object {
        "color": "#e3008c",
        "data": 28,
        "legend": "Company B",
      },
      Object {
        "color": "#2aa0a4",
        "data": 22,
        "legend": "Company C",
      },
      Object {
        "color": "#9373c0",
        "data": 15,
        "legend": "Company D",
      },
    ],
    "chartTitle": "Market Share Distribution",
  },
  "innerRadius": 60,
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Donut/Pie Charts Should transform simple donut chart 1`] = `
Object {
  "data": Object {
    "chartData": Array [
      Object {
        "color": "#637cef",
        "data": 28,
        "legend": "A",
      },
      Object {
        "color": "#e3008c",
        "data": 55,
        "legend": "B",
      },
      Object {
        "color": "#2aa0a4",
        "data": 43,
        "legend": "C",
      },
      Object {
        "color": "#9373c0",
        "data": 91,
        "legend": "D",
      },
    ],
    "chartTitle": "Donut Chart",
  },
  "innerRadius": 50,
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Formatting Tests Should transform chart with date formatting 1`] = `
Object {
  "chartTitle": "Month",
  "data": Object {
    "chartTitle": "Monthly Operating Expenses (Full Month Names)",
    "lineChartData": Array [
      Object {
        "color": "#FFB900",
        "data": Array [
          Object {
            "x": 2024-01-01T00:00:00.000Z,
            "y": 12500,
          },
          Object {
            "x": 2024-02-01T00:00:00.000Z,
            "y": 13200,
          },
          Object {
            "x": 2024-03-01T00:00:00.000Z,
            "y": 11800,
          },
          Object {
            "x": 2024-04-01T00:00:00.000Z,
            "y": 14500,
          },
          Object {
            "x": 2024-05-01T00:00:00.000Z,
            "y": 13900,
          },
          Object {
            "x": 2024-06-01T00:00:00.000Z,
            "y": 15200,
          },
        ],
        "legend": "default",
      },
    ],
  },
  "height": 350,
  "hideLegend": false,
  "tickFormat": "%B",
  "width": 600,
  "yAxisTickFormat": "$,.0f",
  "yAxisTitle": "Operating Expenses",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Formatting Tests Should transform chart with percentage formatting 1`] = `
Object {
  "chartTitle": "Region",
  "data": Object {
    "chartTitle": "Regional Market Share Distribution",
    "lineChartData": Array [
      Object {
        "color": "#00B7C3",
        "data": Array [
          Object {
            "x": 0,
            "y": 0.3245,
          },
          Object {
            "x": 0,
            "y": 0.2812,
          },
          Object {
            "x": 0,
            "y": 0.2567,
          },
          Object {
            "x": 0,
            "y": 0.0823,
          },
          Object {
            "x": 0,
            "y": 0.0553,
          },
        ],
        "legend": "default",
      },
    ],
  },
  "height": 350,
  "hideLegend": false,
  "width": 500,
  "xAxisCategoryOrder": "sum descending",
  "yAxisTickFormat": ".2%",
  "yAxisTitle": "Market Share",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Heatmap Charts Should transform air quality heatmap 1`] = `
Object {
  "chartTitle": "Air Quality Index Heatmap",
  "data": Array [
    Object {
      "data": Array [
        Object {
          "rectText": 45,
          "value": 45,
          "x": "Morning",
          "y": "New York",
        },
        Object {
          "rectText": 62,
          "value": 62,
          "x": "Afternoon",
          "y": "New York",
        },
        Object {
          "rectText": 58,
          "value": 58,
          "x": "Evening",
          "y": "New York",
        },
        Object {
          "rectText": 85,
          "value": 85,
          "x": "Morning",
          "y": "Los Angeles",
        },
        Object {
          "rectText": 95,
          "value": 95,
          "x": "Afternoon",
          "y": "Los Angeles",
        },
        Object {
          "rectText": 78,
          "value": 78,
          "x": "Evening",
          "y": "Los Angeles",
        },
        Object {
          "rectText": 52,
          "value": 52,
          "x": "Morning",
          "y": "Chicago",
        },
        Object {
          "rectText": 68,
          "value": 68,
          "x": "Afternoon",
          "y": "Chicago",
        },
        Object {
          "rectText": 61,
          "value": 61,
          "x": "Evening",
          "y": "Chicago",
        },
        Object {
          "rectText": 72,
          "value": 72,
          "x": "Morning",
          "y": "Houston",
        },
        Object {
          "rectText": 88,
          "value": 88,
          "x": "Afternoon",
          "y": "Houston",
        },
        Object {
          "rectText": 75,
          "value": 75,
          "x": "Evening",
          "y": "Houston",
        },
      ],
      "legend": "",
      "value": 0,
    },
  ],
  "domainValuesForColorScale": Array [
    45,
    57.5,
    70,
    82.5,
    95,
  ],
  "height": 350,
  "hideLegend": true,
  "hideTickOverlap": true,
  "noOfCharsToTruncate": 20,
  "rangeValuesForColorScale": Array [
    "rgb(0, 150, 255)",
    "rgb(64, 113, 191)",
    "rgb(128, 75, 128)",
    "rgb(191, 38, 64)",
    "rgb(255, 0, 0)",
  ],
  "showYAxisLables": true,
  "showYAxisLablesTooltip": true,
  "sortOrder": "none",
  "width": undefined,
  "wrapXAxisLables": true,
  "xAxisTitle": "Time of Day",
  "yAxisTitle": "City",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Heatmap Charts Should transform financial ratios heatmap 1`] = `
Object {
  "chartTitle": "Financial Ratios Heatmap",
  "data": Array [
    Object {
      "data": Array [
        Object {
          "rectText": 2.1,
          "value": 2.1,
          "x": "Company A",
          "y": "Current Ratio",
        },
        Object {
          "rectText": 1.5,
          "value": 1.5,
          "x": "Company A",
          "y": "Quick Ratio",
        },
        Object {
          "rectText": 0.8,
          "value": 0.8,
          "x": "Company A",
          "y": "Debt-to-Equity",
        },
        Object {
          "rectText": 15.2,
          "value": 15.2,
          "x": "Company A",
          "y": "ROE",
        },
        Object {
          "rectText": 1.8,
          "value": 1.8,
          "x": "Company B",
          "y": "Current Ratio",
        },
        Object {
          "rectText": 1.2,
          "value": 1.2,
          "x": "Company B",
          "y": "Quick Ratio",
        },
        Object {
          "rectText": 1.3,
          "value": 1.3,
          "x": "Company B",
          "y": "Debt-to-Equity",
        },
        Object {
          "rectText": 12.7,
          "value": 12.7,
          "x": "Company B",
          "y": "ROE",
        },
        Object {
          "rectText": 2.5,
          "value": 2.5,
          "x": "Company C",
          "y": "Current Ratio",
        },
        Object {
          "rectText": 1.9,
          "value": 1.9,
          "x": "Company C",
          "y": "Quick Ratio",
        },
        Object {
          "rectText": 0.5,
          "value": 0.5,
          "x": "Company C",
          "y": "Debt-to-Equity",
        },
        Object {
          "rectText": 18.5,
          "value": 18.5,
          "x": "Company C",
          "y": "ROE",
        },
      ],
      "legend": "",
      "value": 0,
    },
  ],
  "domainValuesForColorScale": Array [
    0.5,
    5,
    9.5,
    14,
    18.5,
  ],
  "height": 350,
  "hideLegend": true,
  "hideTickOverlap": true,
  "noOfCharsToTruncate": 20,
  "rangeValuesForColorScale": Array [
    "rgb(0, 150, 255)",
    "rgb(64, 113, 191)",
    "rgb(128, 75, 128)",
    "rgb(191, 38, 64)",
    "rgb(255, 0, 0)",
  ],
  "showYAxisLables": true,
  "showYAxisLablesTooltip": true,
  "sortOrder": "none",
  "width": undefined,
  "wrapXAxisLables": true,
  "xAxisTitle": "Company",
  "yAxisTitle": "Financial Ratio",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Heatmap Charts Should transform simple heatmap chart 1`] = `
Object {
  "chartTitle": "Heatmap Chart",
  "data": Array [
    Object {
      "data": Array [
        Object {
          "rectText": 10,
          "value": 10,
          "x": "A",
          "y": "Monday",
        },
        Object {
          "rectText": 20,
          "value": 20,
          "x": "B",
          "y": "Monday",
        },
        Object {
          "rectText": 15,
          "value": 15,
          "x": "C",
          "y": "Monday",
        },
        Object {
          "rectText": 25,
          "value": 25,
          "x": "A",
          "y": "Tuesday",
        },
        Object {
          "rectText": 30,
          "value": 30,
          "x": "B",
          "y": "Tuesday",
        },
        Object {
          "rectText": 22,
          "value": 22,
          "x": "C",
          "y": "Tuesday",
        },
        Object {
          "rectText": 18,
          "value": 18,
          "x": "A",
          "y": "Wednesday",
        },
        Object {
          "rectText": 28,
          "value": 28,
          "x": "B",
          "y": "Wednesday",
        },
        Object {
          "rectText": 35,
          "value": 35,
          "x": "C",
          "y": "Wednesday",
        },
      ],
      "legend": "",
      "value": 0,
    },
  ],
  "domainValuesForColorScale": Array [
    10,
    16.25,
    22.5,
    28.75,
    35,
  ],
  "height": 350,
  "hideLegend": true,
  "hideTickOverlap": true,
  "noOfCharsToTruncate": 20,
  "rangeValuesForColorScale": Array [
    "rgb(0, 150, 255)",
    "rgb(64, 113, 191)",
    "rgb(128, 75, 128)",
    "rgb(191, 38, 64)",
    "rgb(255, 0, 0)",
  ],
  "showYAxisLables": true,
  "showYAxisLablesTooltip": true,
  "sortOrder": "none",
  "width": undefined,
  "wrapXAxisLables": true,
  "xAxisTitle": "X Category",
  "yAxisTitle": "Day",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Line Charts Should transform API response time line chart 1`] = `
Object {
  "chartTitle": "Time",
  "data": Object {
    "chartTitle": "API Response Time Monitoring",
    "lineChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "x": 2024-11-27T02:30:00.000Z,
            "y": 145,
          },
          Object {
            "x": 2024-11-27T03:30:00.000Z,
            "y": 132,
          },
          Object {
            "x": 2024-11-27T04:30:00.000Z,
            "y": 158,
          },
          Object {
            "x": 2024-11-27T05:30:00.000Z,
            "y": 142,
          },
          Object {
            "x": 2024-11-27T06:30:00.000Z,
            "y": 178,
          },
          Object {
            "x": 2024-11-27T07:30:00.000Z,
            "y": 165,
          },
          Object {
            "x": 2024-11-27T08:30:00.000Z,
            "y": 152,
          },
          Object {
            "x": 2024-11-27T09:30:00.000Z,
            "y": 138,
          },
          Object {
            "x": 2024-11-27T10:30:00.000Z,
            "y": 148,
          },
          Object {
            "x": 2024-11-27T11:30:00.000Z,
            "y": 156,
          },
        ],
        "legend": "default",
      },
    ],
  },
  "height": undefined,
  "hideLegend": false,
  "tickFormat": "%H:%M",
  "width": undefined,
  "yAxisTitle": "Response Time (ms)",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Line Charts Should transform daily orders line chart 1`] = `
Object {
  "chartTitle": "Date",
  "data": Object {
    "chartTitle": "Daily Order Volume",
    "lineChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "x": 2024-11-01T00:00:00.000Z,
            "y": 342,
          },
          Object {
            "x": 2024-11-02T00:00:00.000Z,
            "y": 378,
          },
          Object {
            "x": 2024-11-03T00:00:00.000Z,
            "y": 295,
          },
          Object {
            "x": 2024-11-04T00:00:00.000Z,
            "y": 412,
          },
          Object {
            "x": 2024-11-05T00:00:00.000Z,
            "y": 456,
          },
          Object {
            "x": 2024-11-06T00:00:00.000Z,
            "y": 398,
          },
          Object {
            "x": 2024-11-07T00:00:00.000Z,
            "y": 367,
          },
          Object {
            "x": 2024-11-08T00:00:00.000Z,
            "y": 423,
          },
          Object {
            "x": 2024-11-09T00:00:00.000Z,
            "y": 389,
          },
          Object {
            "x": 2024-11-10T00:00:00.000Z,
            "y": 445,
          },
        ],
        "legend": "default",
      },
    ],
  },
  "height": undefined,
  "hideLegend": false,
  "tickFormat": "%b %d",
  "width": undefined,
  "yAxisTitle": "Number of Orders",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Line Charts Should transform game scores line chart 1`] = `
Object {
  "chartTitle": "Game Number",
  "data": Object {
    "chartTitle": "Team Scoring Timeline",
    "lineChartData": Array [
      Object {
        "color": "purple",
        "data": Array [
          Object {
            "x": 1,
            "y": 98,
          },
          Object {
            "x": 2,
            "y": 105,
          },
          Object {
            "x": 3,
            "y": 92,
          },
          Object {
            "x": 4,
            "y": 110,
          },
          Object {
            "x": 5,
            "y": 88,
          },
          Object {
            "x": 6,
            "y": 115,
          },
          Object {
            "x": 7,
            "y": 102,
          },
          Object {
            "x": 8,
            "y": 97,
          },
          Object {
            "x": 9,
            "y": 108,
          },
          Object {
            "x": 10,
            "y": 112,
          },
        ],
        "legend": "default",
      },
    ],
  },
  "height": undefined,
  "hideLegend": false,
  "width": undefined,
  "yAxisTitle": "Score",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Line Charts Should transform line chart with annotations 1`] = `
Object {
  "annotations": Array [
    Object {
      "coordinates": Object {
        "type": "data",
        "x": 0,
        "y": 60,
      },
      "id": "rule-h-1",
      "style": Object {
        "borderColor": "red",
        "borderWidth": 1,
      },
      "text": "",
    },
  ],
  "chartTitle": "Date",
  "data": Object {
    "chartTitle": "Line Chart with Annotations",
    "lineChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "x": 2023-01-01T00:00:00.000Z,
            "y": 28,
          },
          Object {
            "x": 2023-01-02T00:00:00.000Z,
            "y": 55,
          },
          Object {
            "x": 2023-01-03T00:00:00.000Z,
            "y": 43,
          },
          Object {
            "x": 2023-01-04T00:00:00.000Z,
            "y": 91,
          },
          Object {
            "x": 2023-01-05T00:00:00.000Z,
            "y": 81,
          },
        ],
        "legend": "default",
      },
    ],
  },
  "height": undefined,
  "hideLegend": false,
  "width": undefined,
  "yAxisTitle": "Value",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Line Charts Should transform line chart with log scale 1`] = `
Object {
  "chartTitle": "Year",
  "data": Object {
    "chartTitle": "User Growth (Logarithmic Scale)",
    "lineChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "x": 2015,
            "y": 100,
          },
          Object {
            "x": 2016,
            "y": 500,
          },
          Object {
            "x": 2017,
            "y": 2500,
          },
          Object {
            "x": 2018,
            "y": 12500,
          },
          Object {
            "x": 2019,
            "y": 62500,
          },
          Object {
            "x": 2020,
            "y": 312500,
          },
          Object {
            "x": 2021,
            "y": 1562500,
          },
        ],
        "legend": "default",
      },
    ],
  },
  "height": undefined,
  "hideLegend": false,
  "width": undefined,
  "yAxisTitle": "Users (log scale)",
  "yAxisType": "log",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Line Charts Should transform simple line chart 1`] = `
Object {
  "chartTitle": "Date",
  "data": Object {
    "chartTitle": "Simple Line Chart",
    "lineChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "x": 2023-01-01T00:00:00.000Z,
            "y": 28,
          },
          Object {
            "x": 2023-01-02T00:00:00.000Z,
            "y": 55,
          },
          Object {
            "x": 2023-01-03T00:00:00.000Z,
            "y": 43,
          },
          Object {
            "x": 2023-01-04T00:00:00.000Z,
            "y": 91,
          },
          Object {
            "x": 2023-01-05T00:00:00.000Z,
            "y": 81,
          },
        ],
        "legend": "A",
      },
      Object {
        "color": "#e3008c",
        "data": Array [
          Object {
            "x": 2023-01-01T00:00:00.000Z,
            "y": 20,
          },
          Object {
            "x": 2023-01-02T00:00:00.000Z,
            "y": 40,
          },
          Object {
            "x": 2023-01-03T00:00:00.000Z,
            "y": 30,
          },
          Object {
            "x": 2023-01-04T00:00:00.000Z,
            "y": 70,
          },
          Object {
            "x": 2023-01-05T00:00:00.000Z,
            "y": 60,
          },
        ],
        "legend": "B",
      },
    ],
  },
  "height": undefined,
  "hideLegend": false,
  "width": undefined,
  "yAxisTitle": "Value",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Line Charts Should transform temperature trend line chart 1`] = `
Object {
  "chartTitle": "Year",
  "data": Object {
    "chartTitle": "Global Average Temperature Trend",
    "lineChartData": Array [
      Object {
        "color": "darkred",
        "data": Array [
          Object {
            "x": 2014,
            "y": 14.57,
          },
          Object {
            "x": 2015,
            "y": 14.82,
          },
          Object {
            "x": 2016,
            "y": 14.98,
          },
          Object {
            "x": 2017,
            "y": 14.89,
          },
          Object {
            "x": 2018,
            "y": 14.81,
          },
          Object {
            "x": 2019,
            "y": 14.97,
          },
          Object {
            "x": 2020,
            "y": 15.01,
          },
          Object {
            "x": 2021,
            "y": 14.88,
          },
          Object {
            "x": 2022,
            "y": 15.03,
          },
          Object {
            "x": 2023,
            "y": 15.12,
          },
        ],
        "legend": "default",
      },
    ],
  },
  "height": undefined,
  "hideLegend": false,
  "width": undefined,
  "yAxisTitle": "Temperature (°C)",
  "yMaxValue": 15.5,
  "yMinValue": 14,
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Scatter Charts Should transform ad CTR scatter chart 1`] = `
Object {
  "data": Object {
    "chartTitle": "Ad Performance - CTR Analysis",
    "scatterChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "markerSize": 3600,
            "x": 120000,
            "y": 3,
          },
        ],
        "legend": "3",
      },
      Object {
        "color": "#e3008c",
        "data": Array [
          Object {
            "markerSize": 1800,
            "x": 45000,
            "y": 4,
          },
        ],
        "legend": "4",
      },
      Object {
        "color": "#2aa0a4",
        "data": Array [
          Object {
            "markerSize": 1250,
            "x": 50000,
            "y": 2.5,
          },
        ],
        "legend": "2.5",
      },
      Object {
        "color": "#9373c0",
        "data": Array [
          Object {
            "markerSize": 2625,
            "x": 75000,
            "y": 3.5,
          },
          Object {
            "markerSize": 3150,
            "x": 90000,
            "y": 3.5,
          },
        ],
        "legend": "3.5",
      },
      Object {
        "color": "#13a10e",
        "data": Array [
          Object {
            "markerSize": 1440,
            "x": 60000,
            "y": 2.4,
          },
        ],
        "legend": "2.4",
      },
      Object {
        "color": "#3a96dd",
        "data": Array [
          Object {
            "markerSize": 4500,
            "x": 100000,
            "y": 4.5,
          },
        ],
        "legend": "4.5",
      },
    ],
  },
  "xAxisTitle": "Impressions",
  "yAxisTitle": "Click-Through Rate (%)",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Scatter Charts Should transform health metrics scatter chart 1`] = `
Object {
  "data": Object {
    "chartTitle": "Steps vs Calories (sized by Sleep)",
    "scatterChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "markerSize": 8,
            "x": 12000,
            "y": 580,
          },
        ],
        "legend": "8",
      },
      Object {
        "color": "#e3008c",
        "data": Array [
          Object {
            "markerSize": 7.5,
            "x": 8500,
            "y": 420,
          },
        ],
        "legend": "7.5",
      },
      Object {
        "color": "#2aa0a4",
        "data": Array [
          Object {
            "markerSize": 6.5,
            "x": 6500,
            "y": 320,
          },
        ],
        "legend": "6.5",
      },
      Object {
        "color": "#9373c0",
        "data": Array [
          Object {
            "markerSize": 7.8,
            "x": 10500,
            "y": 510,
          },
        ],
        "legend": "7.8",
      },
      Object {
        "color": "#13a10e",
        "data": Array [
          Object {
            "markerSize": 7.2,
            "x": 9200,
            "y": 450,
          },
        ],
        "legend": "7.2",
      },
      Object {
        "color": "#3a96dd",
        "data": Array [
          Object {
            "markerSize": 8.5,
            "x": 15000,
            "y": 720,
          },
        ],
        "legend": "8.5",
      },
      Object {
        "color": "#ca5010",
        "data": Array [
          Object {
            "markerSize": 6.8,
            "x": 7800,
            "y": 380,
          },
        ],
        "legend": "6.8",
      },
      Object {
        "color": "#57811b",
        "data": Array [
          Object {
            "markerSize": 7.9,
            "x": 11500,
            "y": 560,
          },
        ],
        "legend": "7.9",
      },
    ],
  },
  "xAxisTitle": "Daily Steps",
  "yAxisTitle": "Calories Burned",
}
`;

exports[`VegaLiteSchemaAdapter E2E Tests Scatter Charts Should transform simple scatter chart 1`] = `
Object {
  "data": Object {
    "chartTitle": "Scatter Chart",
    "scatterChartData": Array [
      Object {
        "color": "#637cef",
        "data": Array [
          Object {
            "markerSize": 5,
            "x": 10,
            "y": 20,
          },
          Object {
            "markerSize": 10,
            "x": 20,
            "y": 30,
          },
          Object {
            "markerSize": 15,
            "x": 30,
            "y": 25,
          },
        ],
        "legend": "A",
      },
      Object {
        "color": "#e3008c",
        "data": Array [
          Object {
            "markerSize": 8,
            "x": 40,
            "y": 45,
          },
          Object {
            "markerSize": 12,
            "x": 50,
            "y": 40,
          },
          Object {
            "markerSize": 20,
            "x": 60,
            "y": 55,
          },
        ],
        "legend": "B",
      },
    ],
  },
  "xAxisTitle": "X Axis",
  "yAxisTitle": "Y Axis",
}
`;
